--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -9,4 +9,4 @@ html(lang="en")
     link(href="css/style.css", rel="stylesheet", type="text/css")
   body
     block content
-    script(src='js/app.js')
+    script(src='js/main.js')
